restart/Main/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> SourceCode
Rule 1     SourceCode -> ENDMARKER
Rule 2     SourceCode -> FileContent ENDMARKER
Rule 3     FileContent -> FileContent Statement
Rule 4     FileContent -> Statement
Rule 5     FileContent -> empty
Rule 6     empty -> <empty>
Rule 7     Statement -> Assignment
Rule 8     Statement -> PrintSomething
Rule 9     Statement -> Something_Conditional
Rule 10    Statement -> ForLoop
Rule 11    Statement -> Expression
Rule 12    ForLoop -> FOR IDENTIFIER IN Expression LEFT_BRACKET FileContent RIGHT_BRACKET
Rule 13    Assignment -> IDENTIFIER ASSIGNMENT Expression
Rule 14    Something_Conditional -> IF Expression LEFT_BRACKET FileContent RIGHT_BRACKET
Rule 15    Something_Conditional -> WHILE Expression LEFT_BRACKET FileContent RIGHT_BRACKET
Rule 16    Something_Conditional -> FOREVER_LOOP LEFT_BRACKET FileContent RIGHT_BRACKET
Rule 17    Expression -> Expression PLUS Expression
Rule 18    Expression -> Expression MINUS Expression
Rule 19    Expression -> Expression TIMES Expression
Rule 20    Expression -> Expression DIVIDE Expression
Rule 21    Expression -> Expression GREAT_THAN Expression
Rule 22    Expression -> Expression LOWER_THAN Expression
Rule 23    Expression -> Expression GREAT_EQUAL Expression
Rule 24    Expression -> Expression LOWER_EQUAL Expression
Rule 25    Expression -> Expression EQUAL Expression
Rule 26    Expression -> Expression NOT_EQUAL Expression
Rule 27    Expression -> NUMBER
Rule 28    Expression -> STRING
Rule 29    Expression -> IDENTIFIER
Rule 30    Expression -> FLOAT
Rule 31    Expression -> LEFT_PAREN Expression RIGHT_PAREN
Rule 32    Expression -> MINUS Expression
Rule 33    PrintSomething -> PRINT LEFT_PAREN Expression RIGHT_PAREN

Terminals, with rules where they appear

ASSIGNMENT           : 13
DIVIDE               : 20
ENDMARKER            : 1 2
EQUAL                : 25
FLOAT                : 30
FOR                  : 12
FOREVER_LOOP         : 16
GREAT_EQUAL          : 23
GREAT_THAN           : 21
IDENTIFIER           : 12 13 29
IF                   : 14
IN                   : 12
LEFT_BRACKET         : 12 14 15 16
LEFT_PAREN           : 31 33
LOWER_EQUAL          : 24
LOWER_THAN           : 22
MINUS                : 18 32
NOT_EQUAL            : 26
NUMBER               : 27
PLUS                 : 17
PRINT                : 33
RIGHT_BRACKET        : 12 14 15 16
RIGHT_PAREN          : 31 33
STRING               : 28
TIMES                : 19
WHILE                : 15
error                : 

Nonterminals, with rules where they appear

Assignment           : 7
Expression           : 11 12 13 14 15 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 31 32 33
FileContent          : 2 3 12 14 15 16
ForLoop              : 10
PrintSomething       : 8
Something_Conditional : 9
SourceCode           : 0
Statement            : 3 4
empty                : 5

Parsing method: LALR

state 0

    (0) S' -> . SourceCode
    (1) SourceCode -> . ENDMARKER
    (2) SourceCode -> . FileContent ENDMARKER
    (3) FileContent -> . FileContent Statement
    (4) FileContent -> . Statement
    (5) FileContent -> . empty
    (7) Statement -> . Assignment
    (8) Statement -> . PrintSomething
    (9) Statement -> . Something_Conditional
    (10) Statement -> . ForLoop
    (11) Statement -> . Expression
    (6) empty -> .
    (13) Assignment -> . IDENTIFIER ASSIGNMENT Expression
    (33) PrintSomething -> . PRINT LEFT_PAREN Expression RIGHT_PAREN
    (14) Something_Conditional -> . IF Expression LEFT_BRACKET FileContent RIGHT_BRACKET
    (15) Something_Conditional -> . WHILE Expression LEFT_BRACKET FileContent RIGHT_BRACKET
    (16) Something_Conditional -> . FOREVER_LOOP LEFT_BRACKET FileContent RIGHT_BRACKET
    (12) ForLoop -> . FOR IDENTIFIER IN Expression LEFT_BRACKET FileContent RIGHT_BRACKET
    (17) Expression -> . Expression PLUS Expression
    (18) Expression -> . Expression MINUS Expression
    (19) Expression -> . Expression TIMES Expression
    (20) Expression -> . Expression DIVIDE Expression
    (21) Expression -> . Expression GREAT_THAN Expression
    (22) Expression -> . Expression LOWER_THAN Expression
    (23) Expression -> . Expression GREAT_EQUAL Expression
    (24) Expression -> . Expression LOWER_EQUAL Expression
    (25) Expression -> . Expression EQUAL Expression
    (26) Expression -> . Expression NOT_EQUAL Expression
    (27) Expression -> . NUMBER
    (28) Expression -> . STRING
    (29) Expression -> . IDENTIFIER
    (30) Expression -> . FLOAT
    (31) Expression -> . LEFT_PAREN Expression RIGHT_PAREN
    (32) Expression -> . MINUS Expression

  ! shift/reduce conflict for ENDMARKER resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOREVER_LOOP resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for LEFT_PAREN resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    ENDMARKER       shift and go to state 2
    IDENTIFIER      shift and go to state 11
    PRINT           shift and go to state 12
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOREVER_LOOP    shift and go to state 16
    FOR             shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    FLOAT           shift and go to state 21
    LEFT_PAREN      shift and go to state 13
    MINUS           shift and go to state 18

  ! ENDMARKER       [ reduce using rule 6 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 6 (empty -> .) ]
  ! PRINT           [ reduce using rule 6 (empty -> .) ]
  ! IF              [ reduce using rule 6 (empty -> .) ]
  ! WHILE           [ reduce using rule 6 (empty -> .) ]
  ! FOREVER_LOOP    [ reduce using rule 6 (empty -> .) ]
  ! FOR             [ reduce using rule 6 (empty -> .) ]
  ! NUMBER          [ reduce using rule 6 (empty -> .) ]
  ! STRING          [ reduce using rule 6 (empty -> .) ]
  ! FLOAT           [ reduce using rule 6 (empty -> .) ]
  ! LEFT_PAREN      [ reduce using rule 6 (empty -> .) ]
  ! MINUS           [ reduce using rule 6 (empty -> .) ]

    SourceCode                     shift and go to state 1
    FileContent                    shift and go to state 3
    Statement                      shift and go to state 4
    empty                          shift and go to state 5
    Assignment                     shift and go to state 6
    PrintSomething                 shift and go to state 7
    Something_Conditional          shift and go to state 8
    ForLoop                        shift and go to state 9
    Expression                     shift and go to state 10

state 1

    (0) S' -> SourceCode .



state 2

    (1) SourceCode -> ENDMARKER .

    $end            reduce using rule 1 (SourceCode -> ENDMARKER .)


state 3

    (2) SourceCode -> FileContent . ENDMARKER
    (3) FileContent -> FileContent . Statement
    (7) Statement -> . Assignment
    (8) Statement -> . PrintSomething
    (9) Statement -> . Something_Conditional
    (10) Statement -> . ForLoop
    (11) Statement -> . Expression
    (13) Assignment -> . IDENTIFIER ASSIGNMENT Expression
    (33) PrintSomething -> . PRINT LEFT_PAREN Expression RIGHT_PAREN
    (14) Something_Conditional -> . IF Expression LEFT_BRACKET FileContent RIGHT_BRACKET
    (15) Something_Conditional -> . WHILE Expression LEFT_BRACKET FileContent RIGHT_BRACKET
    (16) Something_Conditional -> . FOREVER_LOOP LEFT_BRACKET FileContent RIGHT_BRACKET
    (12) ForLoop -> . FOR IDENTIFIER IN Expression LEFT_BRACKET FileContent RIGHT_BRACKET
    (17) Expression -> . Expression PLUS Expression
    (18) Expression -> . Expression MINUS Expression
    (19) Expression -> . Expression TIMES Expression
    (20) Expression -> . Expression DIVIDE Expression
    (21) Expression -> . Expression GREAT_THAN Expression
    (22) Expression -> . Expression LOWER_THAN Expression
    (23) Expression -> . Expression GREAT_EQUAL Expression
    (24) Expression -> . Expression LOWER_EQUAL Expression
    (25) Expression -> . Expression EQUAL Expression
    (26) Expression -> . Expression NOT_EQUAL Expression
    (27) Expression -> . NUMBER
    (28) Expression -> . STRING
    (29) Expression -> . IDENTIFIER
    (30) Expression -> . FLOAT
    (31) Expression -> . LEFT_PAREN Expression RIGHT_PAREN
    (32) Expression -> . MINUS Expression

    ENDMARKER       shift and go to state 22
    IDENTIFIER      shift and go to state 11
    PRINT           shift and go to state 12
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOREVER_LOOP    shift and go to state 16
    FOR             shift and go to state 17
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    FLOAT           shift and go to state 21
    LEFT_PAREN      shift and go to state 13
    MINUS           shift and go to state 18

    Statement                      shift and go to state 23
    Assignment                     shift and go to state 6
    PrintSomething                 shift and go to state 7
    Something_Conditional          shift and go to state 8
    ForLoop                        shift and go to state 9
    Expression                     shift and go to state 10

state 4

    (4) FileContent -> Statement .

    ENDMARKER       reduce using rule 4 (FileContent -> Statement .)
    IDENTIFIER      reduce using rule 4 (FileContent -> Statement .)
    PRINT           reduce using rule 4 (FileContent -> Statement .)
    IF              reduce using rule 4 (FileContent -> Statement .)
    WHILE           reduce using rule 4 (FileContent -> Statement .)
    FOREVER_LOOP    reduce using rule 4 (FileContent -> Statement .)
    FOR             reduce using rule 4 (FileContent -> Statement .)
    NUMBER          reduce using rule 4 (FileContent -> Statement .)
    STRING          reduce using rule 4 (FileContent -> Statement .)
    FLOAT           reduce using rule 4 (FileContent -> Statement .)
    LEFT_PAREN      reduce using rule 4 (FileContent -> Statement .)
    MINUS           reduce using rule 4 (FileContent -> Statement .)
    RIGHT_BRACKET   reduce using rule 4 (FileContent -> Statement .)


state 5

    (5) FileContent -> empty .

    ENDMARKER       reduce using rule 5 (FileContent -> empty .)
    IDENTIFIER      reduce using rule 5 (FileContent -> empty .)
    PRINT           reduce using rule 5 (FileContent -> empty .)
    IF              reduce using rule 5 (FileContent -> empty .)
    WHILE           reduce using rule 5 (FileContent -> empty .)
    FOREVER_LOOP    reduce using rule 5 (FileContent -> empty .)
    FOR             reduce using rule 5 (FileContent -> empty .)
    NUMBER          reduce using rule 5 (FileContent -> empty .)
    STRING          reduce using rule 5 (FileContent -> empty .)
    FLOAT           reduce using rule 5 (FileContent -> empty .)
    LEFT_PAREN      reduce using rule 5 (FileContent -> empty .)
    MINUS           reduce using rule 5 (FileContent -> empty .)
    RIGHT_BRACKET   reduce using rule 5 (FileContent -> empty .)


state 6

    (7) Statement -> Assignment .

    ENDMARKER       reduce using rule 7 (Statement -> Assignment .)
    IDENTIFIER      reduce using rule 7 (Statement -> Assignment .)
    PRINT           reduce using rule 7 (Statement -> Assignment .)
    IF              reduce using rule 7 (Statement -> Assignment .)
    WHILE           reduce using rule 7 (Statement -> Assignment .)
    FOREVER_LOOP    reduce using rule 7 (Statement -> Assignment .)
    FOR             reduce using rule 7 (Statement -> Assignment .)
    NUMBER          reduce using rule 7 (Statement -> Assignment .)
    STRING          reduce using rule 7 (Statement -> Assignment .)
    FLOAT           reduce using rule 7 (Statement -> Assignment .)
    LEFT_PAREN      reduce using rule 7 (Statement -> Assignment .)
    MINUS           reduce using rule 7 (Statement -> Assignment .)
    RIGHT_BRACKET   reduce using rule 7 (Statement -> Assignment .)


state 7

    (8) Statement -> PrintSomething .

    ENDMARKER       reduce using rule 8 (Statement -> PrintSomething .)
    IDENTIFIER      reduce using rule 8 (Statement -> PrintSomething .)
    PRINT           reduce using rule 8 (Statement -> PrintSomething .)
    IF              reduce using rule 8 (Statement -> PrintSomething .)
    WHILE           reduce using rule 8 (Statement -> PrintSomething .)
    FOREVER_LOOP    reduce using rule 8 (Statement -> PrintSomething .)
    FOR             reduce using rule 8 (Statement -> PrintSomething .)
    NUMBER          reduce using rule 8 (Statement -> PrintSomething .)
    STRING          reduce using rule 8 (Statement -> PrintSomething .)
    FLOAT           reduce using rule 8 (Statement -> PrintSomething .)
    LEFT_PAREN      reduce using rule 8 (Statement -> PrintSomething .)
    MINUS           reduce using rule 8 (Statement -> PrintSomething .)
    RIGHT_BRACKET   reduce using rule 8 (Statement -> PrintSomething .)


state 8

    (9) Statement -> Something_Conditional .

    ENDMARKER       reduce using rule 9 (Statement -> Something_Conditional .)
    IDENTIFIER      reduce using rule 9 (Statement -> Something_Conditional .)
    PRINT           reduce using rule 9 (Statement -> Something_Conditional .)
    IF              reduce using rule 9 (Statement -> Something_Conditional .)
    WHILE           reduce using rule 9 (Statement -> Something_Conditional .)
    FOREVER_LOOP    reduce using rule 9 (Statement -> Something_Conditional .)
    FOR             reduce using rule 9 (Statement -> Something_Conditional .)
    NUMBER          reduce using rule 9 (Statement -> Something_Conditional .)
    STRING          reduce using rule 9 (Statement -> Something_Conditional .)
    FLOAT           reduce using rule 9 (Statement -> Something_Conditional .)
    LEFT_PAREN      reduce using rule 9 (Statement -> Something_Conditional .)
    MINUS           reduce using rule 9 (Statement -> Something_Conditional .)
    RIGHT_BRACKET   reduce using rule 9 (Statement -> Something_Conditional .)


state 9

    (10) Statement -> ForLoop .

    ENDMARKER       reduce using rule 10 (Statement -> ForLoop .)
    IDENTIFIER      reduce using rule 10 (Statement -> ForLoop .)
    PRINT           reduce using rule 10 (Statement -> ForLoop .)
    IF              reduce using rule 10 (Statement -> ForLoop .)
    WHILE           reduce using rule 10 (Statement -> ForLoop .)
    FOREVER_LOOP    reduce using rule 10 (Statement -> ForLoop .)
    FOR             reduce using rule 10 (Statement -> ForLoop .)
    NUMBER          reduce using rule 10 (Statement -> ForLoop .)
    STRING          reduce using rule 10 (Statement -> ForLoop .)
    FLOAT           reduce using rule 10 (Statement -> ForLoop .)
    LEFT_PAREN      reduce using rule 10 (Statement -> ForLoop .)
    MINUS           reduce using rule 10 (Statement -> ForLoop .)
    RIGHT_BRACKET   reduce using rule 10 (Statement -> ForLoop .)


state 10

    (11) Statement -> Expression .
    (17) Expression -> Expression . PLUS Expression
    (18) Expression -> Expression . MINUS Expression
    (19) Expression -> Expression . TIMES Expression
    (20) Expression -> Expression . DIVIDE Expression
    (21) Expression -> Expression . GREAT_THAN Expression
    (22) Expression -> Expression . LOWER_THAN Expression
    (23) Expression -> Expression . GREAT_EQUAL Expression
    (24) Expression -> Expression . LOWER_EQUAL Expression
    (25) Expression -> Expression . EQUAL Expression
    (26) Expression -> Expression . NOT_EQUAL Expression

  ! shift/reduce conflict for MINUS resolved as shift
    ENDMARKER       reduce using rule 11 (Statement -> Expression .)
    IDENTIFIER      reduce using rule 11 (Statement -> Expression .)
    PRINT           reduce using rule 11 (Statement -> Expression .)
    IF              reduce using rule 11 (Statement -> Expression .)
    WHILE           reduce using rule 11 (Statement -> Expression .)
    FOREVER_LOOP    reduce using rule 11 (Statement -> Expression .)
    FOR             reduce using rule 11 (Statement -> Expression .)
    NUMBER          reduce using rule 11 (Statement -> Expression .)
    STRING          reduce using rule 11 (Statement -> Expression .)
    FLOAT           reduce using rule 11 (Statement -> Expression .)
    LEFT_PAREN      reduce using rule 11 (Statement -> Expression .)
    RIGHT_BRACKET   reduce using rule 11 (Statement -> Expression .)
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GREAT_THAN      shift and go to state 28
    LOWER_THAN      shift and go to state 29
    GREAT_EQUAL     shift and go to state 30
    LOWER_EQUAL     shift and go to state 31
    EQUAL           shift and go to state 32
    NOT_EQUAL       shift and go to state 33

  ! MINUS           [ reduce using rule 11 (Statement -> Expression .) ]


state 11

    (13) Assignment -> IDENTIFIER . ASSIGNMENT Expression
    (29) Expression -> IDENTIFIER .

    ASSIGNMENT      shift and go to state 34
    PLUS            reduce using rule 29 (Expression -> IDENTIFIER .)
    MINUS           reduce using rule 29 (Expression -> IDENTIFIER .)
    TIMES           reduce using rule 29 (Expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 29 (Expression -> IDENTIFIER .)
    GREAT_THAN      reduce using rule 29 (Expression -> IDENTIFIER .)
    LOWER_THAN      reduce using rule 29 (Expression -> IDENTIFIER .)
    GREAT_EQUAL     reduce using rule 29 (Expression -> IDENTIFIER .)
    LOWER_EQUAL     reduce using rule 29 (Expression -> IDENTIFIER .)
    EQUAL           reduce using rule 29 (Expression -> IDENTIFIER .)
    NOT_EQUAL       reduce using rule 29 (Expression -> IDENTIFIER .)
    ENDMARKER       reduce using rule 29 (Expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 29 (Expression -> IDENTIFIER .)
    PRINT           reduce using rule 29 (Expression -> IDENTIFIER .)
    IF              reduce using rule 29 (Expression -> IDENTIFIER .)
    WHILE           reduce using rule 29 (Expression -> IDENTIFIER .)
    FOREVER_LOOP    reduce using rule 29 (Expression -> IDENTIFIER .)
    FOR             reduce using rule 29 (Expression -> IDENTIFIER .)
    NUMBER          reduce using rule 29 (Expression -> IDENTIFIER .)
    STRING          reduce using rule 29 (Expression -> IDENTIFIER .)
    FLOAT           reduce using rule 29 (Expression -> IDENTIFIER .)
    LEFT_PAREN      reduce using rule 29 (Expression -> IDENTIFIER .)
    RIGHT_BRACKET   reduce using rule 29 (Expression -> IDENTIFIER .)


state 12

    (33) PrintSomething -> PRINT . LEFT_PAREN Expression RIGHT_PAREN

    LEFT_PAREN      shift and go to state 35


state 13

    (31) Expression -> LEFT_PAREN . Expression RIGHT_PAREN
    (17) Expression -> . Expression PLUS Expression
    (18) Expression -> . Expression MINUS Expression
    (19) Expression -> . Expression TIMES Expression
    (20) Expression -> . Expression DIVIDE Expression
    (21) Expression -> . Expression GREAT_THAN Expression
    (22) Expression -> . Expression LOWER_THAN Expression
    (23) Expression -> . Expression GREAT_EQUAL Expression
    (24) Expression -> . Expression LOWER_EQUAL Expression
    (25) Expression -> . Expression EQUAL Expression
    (26) Expression -> . Expression NOT_EQUAL Expression
    (27) Expression -> . NUMBER
    (28) Expression -> . STRING
    (29) Expression -> . IDENTIFIER
    (30) Expression -> . FLOAT
    (31) Expression -> . LEFT_PAREN Expression RIGHT_PAREN
    (32) Expression -> . MINUS Expression

    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    IDENTIFIER      shift and go to state 37
    FLOAT           shift and go to state 21
    LEFT_PAREN      shift and go to state 13
    MINUS           shift and go to state 18

    Expression                     shift and go to state 36

state 14

    (14) Something_Conditional -> IF . Expression LEFT_BRACKET FileContent RIGHT_BRACKET
    (17) Expression -> . Expression PLUS Expression
    (18) Expression -> . Expression MINUS Expression
    (19) Expression -> . Expression TIMES Expression
    (20) Expression -> . Expression DIVIDE Expression
    (21) Expression -> . Expression GREAT_THAN Expression
    (22) Expression -> . Expression LOWER_THAN Expression
    (23) Expression -> . Expression GREAT_EQUAL Expression
    (24) Expression -> . Expression LOWER_EQUAL Expression
    (25) Expression -> . Expression EQUAL Expression
    (26) Expression -> . Expression NOT_EQUAL Expression
    (27) Expression -> . NUMBER
    (28) Expression -> . STRING
    (29) Expression -> . IDENTIFIER
    (30) Expression -> . FLOAT
    (31) Expression -> . LEFT_PAREN Expression RIGHT_PAREN
    (32) Expression -> . MINUS Expression

    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    IDENTIFIER      shift and go to state 37
    FLOAT           shift and go to state 21
    LEFT_PAREN      shift and go to state 13
    MINUS           shift and go to state 18

    Expression                     shift and go to state 38

state 15

    (15) Something_Conditional -> WHILE . Expression LEFT_BRACKET FileContent RIGHT_BRACKET
    (17) Expression -> . Expression PLUS Expression
    (18) Expression -> . Expression MINUS Expression
    (19) Expression -> . Expression TIMES Expression
    (20) Expression -> . Expression DIVIDE Expression
    (21) Expression -> . Expression GREAT_THAN Expression
    (22) Expression -> . Expression LOWER_THAN Expression
    (23) Expression -> . Expression GREAT_EQUAL Expression
    (24) Expression -> . Expression LOWER_EQUAL Expression
    (25) Expression -> . Expression EQUAL Expression
    (26) Expression -> . Expression NOT_EQUAL Expression
    (27) Expression -> . NUMBER
    (28) Expression -> . STRING
    (29) Expression -> . IDENTIFIER
    (30) Expression -> . FLOAT
    (31) Expression -> . LEFT_PAREN Expression RIGHT_PAREN
    (32) Expression -> . MINUS Expression

    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    IDENTIFIER      shift and go to state 37
    FLOAT           shift and go to state 21
    LEFT_PAREN      shift and go to state 13
    MINUS           shift and go to state 18

    Expression                     shift and go to state 39

state 16

    (16) Something_Conditional -> FOREVER_LOOP . LEFT_BRACKET FileContent RIGHT_BRACKET

    LEFT_BRACKET    shift and go to state 40


state 17

    (12) ForLoop -> FOR . IDENTIFIER IN Expression LEFT_BRACKET FileContent RIGHT_BRACKET

    IDENTIFIER      shift and go to state 41


state 18

    (32) Expression -> MINUS . Expression
    (17) Expression -> . Expression PLUS Expression
    (18) Expression -> . Expression MINUS Expression
    (19) Expression -> . Expression TIMES Expression
    (20) Expression -> . Expression DIVIDE Expression
    (21) Expression -> . Expression GREAT_THAN Expression
    (22) Expression -> . Expression LOWER_THAN Expression
    (23) Expression -> . Expression GREAT_EQUAL Expression
    (24) Expression -> . Expression LOWER_EQUAL Expression
    (25) Expression -> . Expression EQUAL Expression
    (26) Expression -> . Expression NOT_EQUAL Expression
    (27) Expression -> . NUMBER
    (28) Expression -> . STRING
    (29) Expression -> . IDENTIFIER
    (30) Expression -> . FLOAT
    (31) Expression -> . LEFT_PAREN Expression RIGHT_PAREN
    (32) Expression -> . MINUS Expression

    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    IDENTIFIER      shift and go to state 37
    FLOAT           shift and go to state 21
    LEFT_PAREN      shift and go to state 13
    MINUS           shift and go to state 18

    Expression                     shift and go to state 42

state 19

    (27) Expression -> NUMBER .

    PLUS            reduce using rule 27 (Expression -> NUMBER .)
    MINUS           reduce using rule 27 (Expression -> NUMBER .)
    TIMES           reduce using rule 27 (Expression -> NUMBER .)
    DIVIDE          reduce using rule 27 (Expression -> NUMBER .)
    GREAT_THAN      reduce using rule 27 (Expression -> NUMBER .)
    LOWER_THAN      reduce using rule 27 (Expression -> NUMBER .)
    GREAT_EQUAL     reduce using rule 27 (Expression -> NUMBER .)
    LOWER_EQUAL     reduce using rule 27 (Expression -> NUMBER .)
    EQUAL           reduce using rule 27 (Expression -> NUMBER .)
    NOT_EQUAL       reduce using rule 27 (Expression -> NUMBER .)
    ENDMARKER       reduce using rule 27 (Expression -> NUMBER .)
    IDENTIFIER      reduce using rule 27 (Expression -> NUMBER .)
    PRINT           reduce using rule 27 (Expression -> NUMBER .)
    IF              reduce using rule 27 (Expression -> NUMBER .)
    WHILE           reduce using rule 27 (Expression -> NUMBER .)
    FOREVER_LOOP    reduce using rule 27 (Expression -> NUMBER .)
    FOR             reduce using rule 27 (Expression -> NUMBER .)
    NUMBER          reduce using rule 27 (Expression -> NUMBER .)
    STRING          reduce using rule 27 (Expression -> NUMBER .)
    FLOAT           reduce using rule 27 (Expression -> NUMBER .)
    LEFT_PAREN      reduce using rule 27 (Expression -> NUMBER .)
    RIGHT_PAREN     reduce using rule 27 (Expression -> NUMBER .)
    LEFT_BRACKET    reduce using rule 27 (Expression -> NUMBER .)
    RIGHT_BRACKET   reduce using rule 27 (Expression -> NUMBER .)


state 20

    (28) Expression -> STRING .

    PLUS            reduce using rule 28 (Expression -> STRING .)
    MINUS           reduce using rule 28 (Expression -> STRING .)
    TIMES           reduce using rule 28 (Expression -> STRING .)
    DIVIDE          reduce using rule 28 (Expression -> STRING .)
    GREAT_THAN      reduce using rule 28 (Expression -> STRING .)
    LOWER_THAN      reduce using rule 28 (Expression -> STRING .)
    GREAT_EQUAL     reduce using rule 28 (Expression -> STRING .)
    LOWER_EQUAL     reduce using rule 28 (Expression -> STRING .)
    EQUAL           reduce using rule 28 (Expression -> STRING .)
    NOT_EQUAL       reduce using rule 28 (Expression -> STRING .)
    ENDMARKER       reduce using rule 28 (Expression -> STRING .)
    IDENTIFIER      reduce using rule 28 (Expression -> STRING .)
    PRINT           reduce using rule 28 (Expression -> STRING .)
    IF              reduce using rule 28 (Expression -> STRING .)
    WHILE           reduce using rule 28 (Expression -> STRING .)
    FOREVER_LOOP    reduce using rule 28 (Expression -> STRING .)
    FOR             reduce using rule 28 (Expression -> STRING .)
    NUMBER          reduce using rule 28 (Expression -> STRING .)
    STRING          reduce using rule 28 (Expression -> STRING .)
    FLOAT           reduce using rule 28 (Expression -> STRING .)
    LEFT_PAREN      reduce using rule 28 (Expression -> STRING .)
    RIGHT_PAREN     reduce using rule 28 (Expression -> STRING .)
    LEFT_BRACKET    reduce using rule 28 (Expression -> STRING .)
    RIGHT_BRACKET   reduce using rule 28 (Expression -> STRING .)


state 21

    (30) Expression -> FLOAT .

    PLUS            reduce using rule 30 (Expression -> FLOAT .)
    MINUS           reduce using rule 30 (Expression -> FLOAT .)
    TIMES           reduce using rule 30 (Expression -> FLOAT .)
    DIVIDE          reduce using rule 30 (Expression -> FLOAT .)
    GREAT_THAN      reduce using rule 30 (Expression -> FLOAT .)
    LOWER_THAN      reduce using rule 30 (Expression -> FLOAT .)
    GREAT_EQUAL     reduce using rule 30 (Expression -> FLOAT .)
    LOWER_EQUAL     reduce using rule 30 (Expression -> FLOAT .)
    EQUAL           reduce using rule 30 (Expression -> FLOAT .)
    NOT_EQUAL       reduce using rule 30 (Expression -> FLOAT .)
    ENDMARKER       reduce using rule 30 (Expression -> FLOAT .)
    IDENTIFIER      reduce using rule 30 (Expression -> FLOAT .)
    PRINT           reduce using rule 30 (Expression -> FLOAT .)
    IF              reduce using rule 30 (Expression -> FLOAT .)
    WHILE           reduce using rule 30 (Expression -> FLOAT .)
    FOREVER_LOOP    reduce using rule 30 (Expression -> FLOAT .)
    FOR             reduce using rule 30 (Expression -> FLOAT .)
    NUMBER          reduce using rule 30 (Expression -> FLOAT .)
    STRING          reduce using rule 30 (Expression -> FLOAT .)
    FLOAT           reduce using rule 30 (Expression -> FLOAT .)
    LEFT_PAREN      reduce using rule 30 (Expression -> FLOAT .)
    RIGHT_PAREN     reduce using rule 30 (Expression -> FLOAT .)
    LEFT_BRACKET    reduce using rule 30 (Expression -> FLOAT .)
    RIGHT_BRACKET   reduce using rule 30 (Expression -> FLOAT .)


state 22

    (2) SourceCode -> FileContent ENDMARKER .

    $end            reduce using rule 2 (SourceCode -> FileContent ENDMARKER .)


state 23

    (3) FileContent -> FileContent Statement .

    ENDMARKER       reduce using rule 3 (FileContent -> FileContent Statement .)
    IDENTIFIER      reduce using rule 3 (FileContent -> FileContent Statement .)
    PRINT           reduce using rule 3 (FileContent -> FileContent Statement .)
    IF              reduce using rule 3 (FileContent -> FileContent Statement .)
    WHILE           reduce using rule 3 (FileContent -> FileContent Statement .)
    FOREVER_LOOP    reduce using rule 3 (FileContent -> FileContent Statement .)
    FOR             reduce using rule 3 (FileContent -> FileContent Statement .)
    NUMBER          reduce using rule 3 (FileContent -> FileContent Statement .)
    STRING          reduce using rule 3 (FileContent -> FileContent Statement .)
    FLOAT           reduce using rule 3 (FileContent -> FileContent Statement .)
    LEFT_PAREN      reduce using rule 3 (FileContent -> FileContent Statement .)
    MINUS           reduce using rule 3 (FileContent -> FileContent Statement .)
    RIGHT_BRACKET   reduce using rule 3 (FileContent -> FileContent Statement .)


state 24

    (17) Expression -> Expression PLUS . Expression
    (17) Expression -> . Expression PLUS Expression
    (18) Expression -> . Expression MINUS Expression
    (19) Expression -> . Expression TIMES Expression
    (20) Expression -> . Expression DIVIDE Expression
    (21) Expression -> . Expression GREAT_THAN Expression
    (22) Expression -> . Expression LOWER_THAN Expression
    (23) Expression -> . Expression GREAT_EQUAL Expression
    (24) Expression -> . Expression LOWER_EQUAL Expression
    (25) Expression -> . Expression EQUAL Expression
    (26) Expression -> . Expression NOT_EQUAL Expression
    (27) Expression -> . NUMBER
    (28) Expression -> . STRING
    (29) Expression -> . IDENTIFIER
    (30) Expression -> . FLOAT
    (31) Expression -> . LEFT_PAREN Expression RIGHT_PAREN
    (32) Expression -> . MINUS Expression

    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    IDENTIFIER      shift and go to state 37
    FLOAT           shift and go to state 21
    LEFT_PAREN      shift and go to state 13
    MINUS           shift and go to state 18

    Expression                     shift and go to state 43

state 25

    (18) Expression -> Expression MINUS . Expression
    (17) Expression -> . Expression PLUS Expression
    (18) Expression -> . Expression MINUS Expression
    (19) Expression -> . Expression TIMES Expression
    (20) Expression -> . Expression DIVIDE Expression
    (21) Expression -> . Expression GREAT_THAN Expression
    (22) Expression -> . Expression LOWER_THAN Expression
    (23) Expression -> . Expression GREAT_EQUAL Expression
    (24) Expression -> . Expression LOWER_EQUAL Expression
    (25) Expression -> . Expression EQUAL Expression
    (26) Expression -> . Expression NOT_EQUAL Expression
    (27) Expression -> . NUMBER
    (28) Expression -> . STRING
    (29) Expression -> . IDENTIFIER
    (30) Expression -> . FLOAT
    (31) Expression -> . LEFT_PAREN Expression RIGHT_PAREN
    (32) Expression -> . MINUS Expression

    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    IDENTIFIER      shift and go to state 37
    FLOAT           shift and go to state 21
    LEFT_PAREN      shift and go to state 13
    MINUS           shift and go to state 18

    Expression                     shift and go to state 44

state 26
